--- a/03-lection1/01-button/button.css
+++ b/03-lection1/01-button/button.css
@@ -1,1 +1,47 @@
 /* Стилизация кнопки */
+.button {
+  border-radius: 8px;
+  height: 48px;
+  width: 189px;
+  border: none;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  /* identical to box height */
+
+  text-align: center;
+  cursor: pointer;
+  color: var(--white);
+  transition: opacity 200ms ease-in-out, background 200ms ease-in-out;
+}
+
+.button__primary {
+  background-color: var(--primary);
+}
+
+.button__secondary {
+  background-color: var(--secondary);
+}
+
+.button__primary:hover:not(:disabled) {
+  background-color: var(--primary-hover);
+}
+
+.button__secondary:hover:not(:disabled) {
+  background-color: var(--secondary-hover);
+}
+.button__alternate {
+  background: none;
+  border: 1px solid var(--grey-3);
+  color: var(--grey-4);
+}
+.button__alternate:hover:not(:disabled) {
+  border: 2px solid var(--grey-4);
+}
+
+:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
