--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,24 +1,30 @@
 @import '../fonts/fonts.css';
 
 :root {
-    --white: #ffffff;
-    --black: #212429;
-    --pink: #F784AD;
-    --purple: #7048E8;
-    --blue: #374FC7;
-    --red: #F03D3E;
-    --grey-1: #F8F9FA;
-    --grey-2: #DDE2E5;
-    --grey-3: #ACB5BD;
-    --grey-4: #495057;
+  --white: #ffffff;
+  --black: #212429;
+  --pink: #f784ad;
+  --purple: #7048e8;
+  --purple-1: #5028c6;
+  --blue: #374fc7;
+  --blue-1: #2342c0;
 
-    --error: var(--red);
-    --success: var(--blue);
+  --red: #f03d3e;
+  --grey-1: #f8f9fa;
+  --grey-2: #dde2e5;
+  --grey-3: #acb5bd;
+  --grey-4: #495057;
 
-    --primary: var(--blue);
-    --secondary: var(--purple);
+  --error: var(--red);
+  --success: var(--blue);
+
+  --primary: var(--blue);
+  --primary-hover: var(--blue-1);
+
+  --secondary: var(--purple);
+  --secondary-hover: var(--purple-1);
 }
 
 * {
-    font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
