--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,10 +19,13 @@
   --success: var(--blue);
 
   --primary: var(--blue);
-  --primary-hover: var(--blue-1);
+  --primary-2: var(--blue-1);
 
   --secondary: var(--purple);
-  --secondary-hover: var(--purple-1);
+  --secondary-2: var(--purple-1);
+
+  --alternate: var(--grey-3);
+  --alternate-2: var(--grey-4);
 }
 
 * {
