redesign panel arrow

--- a/03-lection1/02-accordion/accordion.css
+++ b/03-lection1/02-accordion/accordion.css
@@ -1,5 +1,4 @@
 /* Стилизация аккордеона */
-@import '../../assets/fonts/fonts.css';
 .panel {
   border-radius: 8px;
   padding: 24px 32px 0px 24px;
@@ -29,13 +28,13 @@
   right: 8px;
   width: 16px;
   height: 16px;
-  border-right: 1px solid var(--grey-4);
-  border-bottom: 1px solid var(--grey-4);
-  transform: rotate(45deg);
+  background-image: url("data:image/svg+xml,%3Csvg width='16' height='8' viewBox='0 0 18 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1L9 9L17 1' stroke='%23495057' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+  background-position: center;
+  background-repeat: no-repeat;
 }
+
 .panel[open] .panel__header::after {
-  transform: rotate(-135deg);
-  top: 8px;
+  transform: rotate(180deg);
 }
 .panel__body {
   font-size: 16px;
