--- a/04-lection2/01-histogram/histogram.css
+++ b/04-lection2/01-histogram/histogram.css
@@ -1,6 +1,3 @@
-.card__container {
-  width: 354px;
-}
 .histogram {
   width: 100%;
   --height: 185px;
@@ -15,20 +12,18 @@
 }
 
 .histogram__header {
-}
-.histogram-header {
   display: flex;
   justify-content: space-between;
   font-family: Inter;
   font-style: normal;
 }
 
-.histogram-header__title {
+.histogram__header-title {
   display: flex;
   flex-flow: column;
   justify-content: space-between;
 }
-.title_caption {
+.histogram__title-caption {
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
@@ -36,7 +31,7 @@
   opacity: 0.8;
   color: var(--black);
 }
-.title__summary {
+.histogram__title-summary {
   font-weight: normal;
   font-size: 20px;
   line-height: 26px;
@@ -44,7 +39,7 @@
 
   color: var(--black);
 }
-.histogram-header__link {
+.histogram__header-link {
   margin-top: 3px;
   font-weight: normal;
   font-size: 16px;
@@ -53,20 +48,17 @@
   color: var(--blue);
 }
 .histogram__body {
-}
-.data {
   --data-height: 100px;
   height: var(--data-height);
   width: 100%;
   display: flex;
   align-items: flex-end;
 }
-.data__item {
+
+.histogram__column {
   max-height: 80%;
   height: calc(var(--value) * 1px);
   margin-right: 1px;
-}
-.item {
   flex-grow: 1;
   background-color: var(--blue);
 }
