--- a/04-lection2/01-histogram/histogram.css
+++ b/04-lection2/01-histogram/histogram.css
@@ -1,7 +1,6 @@
 .histogram {
   width: 100%;
-  --height: 185px;
-  height: var(--height);
+  height: 185px;
   background: var(--color-white);
   /* Gray 3 */
 
@@ -48,8 +47,7 @@
   color: var(--blue);
 }
 .histogram__body {
-  --data-height: 100px;
-  height: var(--data-height);
+  height: 100px;
   width: 100%;
   display: flex;
   align-items: flex-end;
