--- a/04-lection2/02-skeleton/skeleton.css
+++ b/04-lection2/02-skeleton/skeleton.css
@@ -6,7 +6,7 @@
   border: 1px solid var(--grey-3);
   box-sizing: border-box;
   border-radius: 8px;
-  padding: 1.5rem 2.5rem 1.5px 1.5rem;
+  padding: 1.5rem 2.5rem 1.5rem 1.5rem;
 }
 .skeleton__header {
   display: flex;
