--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,24 +1,43 @@
 @import '../fonts/fonts.css';
 
 :root {
-    --white: #ffffff;
-    --black: #212429;
-    --pink: #F784AD;
-    --purple: #7048E8;
-    --blue: #374FC7;
-    --red: #F03D3E;
-    --grey-1: #F8F9FA;
-    --grey-2: #DDE2E5;
-    --grey-3: #ACB5BD;
-    --grey-4: #495057;
+  --white: #ffffff;
+  --black: #212429;
+  --pink: #f784ad;
+  --purple: #7048e8;
+  --blue: #374fc7;
+  --dark-blue: #334d6e;
+  --red: #f03d3e;
+  --grey-1: #f8f9fa;
+  --grey-2: #dde2e5;
+  --grey-3: #acb5bd;
+  --grey-4: #495057;
 
-    --error: var(--red);
-    --success: var(--blue);
+  --error: var(--red);
+  --success: var(--blue);
 
-    --primary: var(--blue);
-    --secondary: var(--purple);
+  --primary: var(--blue);
+  --secondary: var(--purple);
 }
 
 * {
-    font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
+}
+
+.button {
+  height: 48px;
+  width: 189px;
+  border-radius: 8px;
+  background: var(--blue);
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+
+  text-align: center;
+
+  color: var(--white);
+  cursor: pointer;
 }
