--- a/05-lection3/03-calendar/calendar.css
+++ b/05-lection3/03-calendar/calendar.css
@@ -44,9 +44,8 @@
 
   font-size: 16px;
   line-height: 20px;
-  width: 2.25rem;
-  height: 2.25rem;
-  /* identical to box height, or 125% */
+  box-sizing: border-box;
+  padding: 0.5em;
 
   text-align: center;
   color: var(--dark-blue);
