--- a/05-lection3/02-modal/modal.css
+++ b/05-lection3/02-modal/modal.css
@@ -1,10 +1,15 @@
 .modal {
   display: none;
-
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: var(--modal-background-color);
   z-index: var(--modal-z-index);
 }
 
-.modal__overlay {
+/* .modal__overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -12,7 +17,7 @@
   bottom: 0;
   background: var(--grey-2);
   opacity: 0.5;
-}
+} */
 .modal__body {
   position: absolute;
   left: 50%;
